--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <aside>
+    <header>
+      <div class="container px-base">
+        <div class="logo">
+          <img src="assets/logo.svg" alt="">
+        </div>
   
+        <div class="title">
+          <span>Online - gratuito</span>
+          <h1>Sorteador<br>de números</h1>
+        </div>
+      </div>
+    </header>
+  </aside>
 </body>
 </html>
