--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
         </div>
       </div>
     </header>
+
+    <section id="about">
+      <div class="container px-base">
+        <ul>
+          <li>
+            <div class="marker"></div>
+            <span>Como funciona o sorteador de números</span>
+            <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+          </li>
+
+          <li>
+            <div class="marker"></div>
+            <span>Posso escolher o intervalo dos números?</span>
+            <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </aside>
 </body>
 </html>
