correção no icone da lista

--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
         <ul>
           <li>
             <div class="marker"></div>
-            <span>Como funciona o sorteador de números</span>
-            <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+            <div>
+              <span>Como funciona o sorteador de números</span>
+              <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+            </div>
           </li>
 
           <li>
             <div class="marker"></div>
-            <span>Posso escolher o intervalo dos números?</span>
-            <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+            <div>
+              <span>Posso escolher o intervalo dos números?</span>
+              <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+            </div>
           </li>
         </ul>
       </div>
