--- a/index.html
+++ b/index.html
@@ -58,19 +58,31 @@
   
         <div class="drawer-options">
           <div class="input-wrapper">
-            <label for="">Números</label>
+            <label for="how-many-numbers">Números</label>
             <input type="text" name="how-many-numbers">
           </div>
   
           <div class="input-wrapper">
-            <label for="">De</label>
-            <input type="text" name="how-many-numbers">
+            <label for="start">De</label>
+            <input type="text" name="start">
           </div>
   
           <div class="input-wrapper">
-            <label for="">De</label>
-            <input type="text" name="how-many-numbers">
+            <label for="end">De</label>
+            <input type="text" name="end">
           </div>
+        </div>
+
+        <div class="no-repeat">
+          <div class="switch-wrapper">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <small>Não repetir número</small>
+          </div>
+
+
         </div>
       </div>
     </main>
