--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
             <small>Não repetir número</small>
           </div>
 
-
+          <div class="button-wrapper">
+            <button>
+              Sortear
+              <img src="assets/icons/arrow.svg" alt="">
+            </button>
+          </div>
         </div>
+
+        
       </div>
     </main>
   </div>
