div do resultado do sorteio

--- a/index.html
+++ b/index.html
@@ -81,16 +81,34 @@
             </label>
             <small>Não repetir número</small>
           </div>
-
-          <div class="button-wrapper">
-            <button>
-              Sortear
-              <img src="assets/icons/arrow.svg" alt="">
-            </button>
-          </div>
         </div>
 
-        
+        <div class="button-wrapper btn">
+          <button>
+            Sortear
+            <img src="assets/icons/arrow.svg" alt="">
+          </button>
+        </div>
+
+        <!-- div do resultado do sorteio (oculto inicialmente) -->
+        <!-- <div class="draw-result">
+          <div class="title">
+            <h3>Resultado do sorteio</h3>
+            <span>1º resultado</span>
+          </div>
+
+          <div class="numbers">
+            <div>23</div>
+          </div>
+
+          <div class="btn">
+            <button>
+              Sortear novamente
+              <img src="assets/icons/replay.svg" alt="">
+            </button>
+          </div>
+        </div> -->
+
       </div>
     </main>
   </div>
