capturando os inputs + correção no display flex

--- a/index.html
+++ b/index.html
@@ -57,20 +57,22 @@
         </div>
   
         <div class="drawer-options">
-          <div class="input-wrapper">
-            <label for="how-many-numbers">Números</label>
-            <input type="text" name="how-many-numbers">
-          </div>
-  
-          <div class="input-wrapper">
-            <label for="start">De</label>
-            <input type="text" name="start">
-          </div>
-  
-          <div class="input-wrapper">
-            <label for="end">De</label>
-            <input type="text" name="end">
-          </div>
+          <form action="">
+            <div class="input-wrapper">
+              <label for="how-many-numbers">Números</label>
+              <input type="text" name="how-many-numbers" id="how-many-numbers">
+            </div>
+    
+            <div class="input-wrapper">
+              <label for="start">De</label>
+              <input type="text" name="start" id="start">
+            </div>
+    
+            <div class="input-wrapper">
+              <label for="end">De</label>
+              <input type="text" name="end" id="end">
+            </div>
+          </form>
         </div>
 
         <div class="no-repeat">
@@ -112,5 +114,7 @@
       </div>
     </main>
   </div>
+
+  <script src="scripts/script.js"></script>
 </body>
 </html>
