exibindo os números na tela

--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
     </aside>
 
     <main id="drawer">
-      <div class="container">
-
-        <div id="draw-info">
-          <h3>Quero sortear:</h3>
-          <p>Defina o intervalo e a quantidade de números, clique em "Sortear" e veja os resultados na tela. É rápido e fácil!</p>
-        </div>
-  
+      <div class="container" id="drawer-container">
         <div class="drawer-options">
+          <div id="draw-info">
+            <h3>Quero sortear:</h3>
+            <p>Defina o intervalo e a quantidade de números, clique em "Sortear" e veja os resultados na tela. É rápido e fácil!</p>
+          </div>
+
           <form action="">
             <div class="input-numbers">
               <div class="input-wrapper">
@@ -103,7 +102,7 @@
           </div>
 
           <div class="numbers">
-            <div>23</div>
+            <div class="number">23</div>
           </div>
 
           <div class="btn">
